--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
     </table>
     <hr />
     <div>
+      <img src="./assets/123.jpg" alt="" width="100" />
       <div>
         <span>1.</span>
         <span>圖像 Angular 開發入門 第二版</span>
@@ -37,6 +38,7 @@
       <div>500</div>
     </div>
     <div>
+      <img src="./assets/1234.jpg" alt="" width="100" />
       <div>
         <span>2.</span>
         <span>金魚都能懂的 CSS 必學屬性</span>
