--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
     <title>電子商網管理後台</title>
   </head>
   <body>
-    <h1>電子商網管理後台</h1>
+    <header>
+      <h1>電子商網管理後台</h1>
+    </header>
     <table border="1">
       <tr>
         <th>No.</th>
@@ -28,7 +30,7 @@
       </tr>
     </table>
     <hr />
-    <div>
+    <section>
       <img src="./assets/123.jpg" alt="" width="100" />
       <div>
         <span>1.</span>
@@ -36,8 +38,8 @@
       </div>
       <div>博碩文化</div>
       <div>500</div>
-    </div>
-    <div>
+    </section>
+    <section>
       <img src="./assets/1234.jpg" alt="" width="100" />
       <div>
         <span>2.</span>
@@ -45,6 +47,7 @@
       </div>
       <div>博碩文化</div>
       <div>500</div>
-    </div>
+    </section>
+    <footer>© 2025</footer>
   </body>
 </html>
