--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
     <header>
       <h1>電子商網管理後台</h1>
     </header>
+    <nav>
+      <a href="./form.html">產品新增</a>
+    </nav>
     <table border="1">
       <tr>
         <th>No.</th>
