--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <nav>
       <a href="./form.html">產品新增</a>
     </nav>
+    <form><input type="text" /><button type="button">查詢</button></form>
     <table border="1">
       <tr>
         <th>No.</th>
