--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1 style="text-align: center">電子商網管理後台</h1>
+      <h1>電子商網管理後台</h1>
     </header>
     <nav>
       <a href="./form.html">產品新增</a>
