feat(css):設定產品卡片框線與寬度樣式

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
       </tr>
     </table>
     <hr />
-    <section>
+    <section class="card">
       <img src="./assets/123.jpg" alt="" width="100" />
       <div>
         <span>1.</span>
@@ -43,7 +43,7 @@
       </div>
       <div>博碩文化</div>
       <div>500</div>
-    </section>
+    <section class="card">
     <section>
       <img src="./assets/1234.jpg" alt="" width="100" />
       <div>
