--- a/src/index.html
+++ b/src/index.html
@@ -43,8 +43,9 @@
       </div>
       <div>博碩文化</div>
       <div>500</div>
+    </section>
+
     <section class="card">
-    <section>
       <img src="./assets/1234.jpg" alt="" width="100" />
       <div>
         <span>2.</span>
