--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,14 @@
     </header>
     <seciont class="body">
       <nav>
-        <a href="./form.html">產品新增</a>
+        <ul>
+          <li>
+            <a href="./form.html">產品新增</a>
+          </li>
+          <li>
+            <a href="">登入</a>
+          </li>
+        </ul>
       </nav>
       <form><input type="text" /><button type="button">查詢</button></form>
       <table border="1">
