--- a/src/index.html
+++ b/src/index.html
@@ -44,25 +44,26 @@
           </tr>
         </table>
         <hr />
-        <section class="card">
-          <img src="./assets/123.jpg" alt="" width="100" />
-          <div>
-            <span>1.</span>
-            <span>圖像 Angular 開發入門 第二版</span>
+        <div class="card-container">
+          <div class="card">
+            <img src="./assets/123.jpg" alt="" width="100" />
+            <div>
+              <span>1.</span>
+              <span>圖像 Angular 開發入門 第二版</span>
+            </div>
+            <div>博碩文化</div>
+            <div>500</div>
           </div>
-          <div>博碩文化</div>
-          <div>500</div>
-        </section>
-        <section class="card">
-          <img src="./assets/1234.jpg" alt="" width="100" />
-          <div>
-            <span>2.</span>
-            <span>金魚都能懂的 CSS 必學屬性</span>
+          <div class="card">
+            <img src="./assets/1234.jpg" alt="" width="100" />
+            <div>
+              <span>2.</span>
+              <span>金魚都能懂的 CSS 必學屬性</span>
+            </div>
+            <div>博碩文化</div>
+            <div>500</div>
           </div>
-          <div>博碩文化</div>
-          <div>500</div>
-        </section>
-            </seciont>
+        </div>
       </section>
     <footer>© 2025</footer>
   </body>
