--- a/src/idnex.html
+++ b/src/idnex.html
@@ -34,7 +34,11 @@
         </div>
       </header>
       <div class="main">Main</div>
-      <footer>Footer</footer>
+      <footer>
+        <div class="container">
+          <p>Copyright 2025電子商城版權所有</p>
+        </div>
+      </footer>
     </section>
   </body>
 </html>
