--- a/src/idnex.html
+++ b/src/idnex.html
@@ -25,7 +25,9 @@
             <div class="right">
               <div class="search">
                 <input type="text" placeholder="查詢書名、作者..." />
-                <button type="button"><span class="material-symbols-outlined"> search </span></button>
+                <button type="button">
+                  <span class="material-symbols-outlined"> search </span>
+                </button>
               </div>
               <button type="button"><span class="material-symbols-outlined"> favorite </span></button>
               <button type="button"><span class="material-symbols-outlined"> shopping_cart </span></button>
