--- a/src/idnex.html
+++ b/src/idnex.html
@@ -35,7 +35,14 @@
           </div>
         </div>
       </header>
-      <div class="main">Main</div>
+      <div class="main">
+        <div class="container">
+          <div>
+            <aside>aside</aside>
+            <main>main</main>
+          </div>
+        </div>
+      </div>
       <footer>
         <div class="container">
           <div>
